--- a/pages/fr/getting-started.mdx
+++ b/pages/fr/getting-started.mdx
@@ -1,60 +1,60 @@
 import Page from "@reason/pages/Docs";
 import StatusBadge from "@reason/components/StatusBadge";
 import DocLink from "@reason/components/DocLink";
-export default Page({ title: "Getting Started" });
+export default Page({ title: "Pour bien démarrer" });
 
-# Getting Started
+# Pour bien démarrer
 
-Welcome to Mina! This section will walk you through the process of setting up a Mina node. After we will show you how to generate a keypair for use with the network. Finally we'll show you how to connect to the network and begin producing blocks.
+Bienvenue à Mina ! Cette section vous guidera tout au long du processus de configuration d'un nœud Mina. Ensuite, nous vous montrerons comment générer une paire de clés à utiliser avec le réseau. Enfin, nous vous montrerons comment vous connecter au réseau et commencer à produire des blocs. 
 
 <Alert>
 
-This documentation is for the **Mainnet** release.
+Cette documentation concerne la version **Mainnet**.
 
-Network status: <StatusBadge service="Network" />
+L'état du réseau: <StatusBadge service="Network" />
 
 </Alert>
 
-## Requirements
+## Prérequis
 
-**Software**: macOS, Linux (currently supports Debian 9 and Ubuntu 18.04 LTS), or any host with Docker
+**Logiciel**: macOS, Linux (prend actuellement en charge Debian 9 et Ubuntu 18.04 LTS) ou tout hôte avec Docker.
 
-Note: Windows is not officially supported at this time. However, community members succeeded in setting up nodes using Windows Subsystem for Linux. Click [here](https://minawiki.com/index.php?title=Mina_on_Windows) for instructions on using Windows, which are created by the community. Additionally Windows users can use the Docker documentation.
+Note: Windows n'est pas officiellement pris en charge pour le moment. Cependant, les membres de la communauté ont réussi à configurer des nœuds à l'aide du sous-système Windows pour Linux.  Cliquez [ici](https://minawiki.com/index.php?title=Mina_on_Windows) pour les instructions en utilisant Windows, qui ont été créées par la communauté. De plus, les utilisateurs de Windows peuvent utiliser la documentation Docker. 
 
-**Hardware**: Sending and receiving mina does not require any special hardware, but running a block producer on the Mina network currently requires:
+**Configuration**: L'envoi et la réception de mina ne nécessitent aucun matériel particulier, mais l'exécution d'un producteur de blocs sur le réseau Mina nécessite actuellement : 
 
-- at least a 8-core processor
-- at least 16GB of RAM
+- un processeur d'au moins 8 cœurs 
+- au moins 16GB de RAM
 
-Note that if you plan on running a snark worker node at the same time as a block producer, you may need more RAM. GPUs aren't currently required, but may be required for node operators when the protoctol is upgraded.
+Notez que si vous prévoyez d'exécuter un nœud de travail snark en même temps qu'un producteur de blocs, vous aurez peut-être besoin de plus de RAM. Les GPU ne sont actuellement pas requis, mais peuvent être nécessaire pour les opérateurs de nœuds quand le protocole sera mis à niveau. 
 
-**Network**: At least 1 Mbps connection
+**Réseau**: Une connexion d'au moins 1 Mbps 
 
-**VM Instances**:
-O(1) Labs has tested running nodes on several cloud providers, and recommends the following instances for basic node operator needs. Keep in mind that custom requirements as well as different cost constraints may require a different instance type.
+**Instances VM **:
+O(1) Labs a testé des nœuds en cours d'exécution sur plusieurs fournisseurs Cloud et recommande les instances suivantes pour les besoins de base des opérateurs de nœuds. Gardez à l'esprit que les besoin spécifiques ainsi que les différentes contraintes de coût peuvent nécessiter un type d'instance différent. 
 
 - AWS - [c5.2xlarge](https://www.ec2instances.info/?filter=c5.2xl&region=us-west-2&cost_duration=daily&selected=c5.2xlarge)
 - GCP - [c2-standard-8](https://cloud.google.com/compute/docs/machine-types)
 - Azure - [Standard_F8s_v2](https://docs.microsoft.com/en-us/azure/virtual-machines/windows/sizes-compute#fsv2-series-1)
 - Digital Ocean - [c-8-16gib](https://cloud.digitalocean.com/droplets/new?size=c-8-16gib)
 
-Check out our [guide](https://youtu.be/M9lE2lgyVEo) for how to configure your Mina node on Google Cloud.
+Consultez notre [guide](https://youtu.be/M9lE2lgyVEo) pour savoir comment configurer votre nœud Mina sur Google Cloud.
 
 ## Installation
 
-The newest binary releases can be found below. Instructions are provided for macOS and Linux below:
+Les dernières versions binaires peuvent être trouvées ci-dessous. Les instructions suivantes sont fournies pour macOS et Linux : 
 
-This is a large download, around 1GB, so the install might take some time.
+Il s'agit d'un téléchargement volumineux, d'environ 1 Go, l'installation peut donc prendre un certain temps. 
 
-<Alert kind="warning">
+<Alert kind="Attention">
 
-If you installed `mina` from a previous release, you'll need to upgrade it so that you won't get banned by the network for using an older client. See instructions below for upgrading both macOS and Linux builds.
+Si vous avez installé `mina` à partir d'une version précédente, vous devrez la mettre à jour afin de ne pas être banni par le réseau pour avoir utilisé un client plus ancien.  Consultez les instructions ci-dessous pour mettre à niveau les versions macOS et Linux. 
 
 </Alert>
 
 ### Ubuntu 18.04 / Debian 9
 
-Add the Mina Debian repo and install:
+Ajoutez le dépôt Mina Debian et installez : 
 
 ```
 echo "deb [trusted=yes] http://packages.o1test.net release main" | sudo tee /etc/apt/sources.list.d/mina.list
@@ -62,39 +62,39 @@ sudo apt-get update
 sudo apt-get install -y curl unzip mina-mainnet=1.1.5-a42bdee
 ```
 
-Check that daemon installed correctly by running `mina version`. The output should read `Commit a42bdeef6b0c15ee34616e4df76c882b0c5c7c2a on branch master`.
+Vérifiez que le programme fantôme est correctement installé en exécutant `mina version`. La sortie doit indiquer `Commit a42bdeef6b0c15ee34616e4df76c882b0c5c7c2a on branch master`. 
 
 ### Windows
 
-Windows is not yet natively supported. If you are interested in receiving a grant to develop Mina for Windows, please email grants@o1labs.org or reach out in the [Discord server](https://bit.ly/MinaDiscord).
+Windows n'est pas encore supporté nativement. Si vous souhaitez recevoir une subvention pour développer Mina pour Windows, veuillez envoyer un e-mail à grant@o1labs.org ou contacter le [serveur Discord] (https://bit.ly/MinaDiscord).
 
-Please instead use the Docker instructions below.
+Veuillez plutôt utiliser les instructions Docker ci-dessous. 
 
 ### macOS
 
-macOS is used by developers, but we are not officially supporting any pre-built packages at this time.
+macOS est utilisé par les développeurs, mais nous ne prenons officiellement en charge aucun package pré-compilé pour le moment. 
 
-Please instead use the Docker instructions below or you may build from source.
+Veuillez plutôt utiliser les instructions Docker ci-dessous ou vous pouvez compiler à partir des sources. 
 
 ### Docker
 
-Docker is cross-platform tool that allows you to run a virtual machine that will execute any needed software. Please follow the official installation instructions for your platform on [this page](https://docs.docker.com/get-docker/). Once docker is installed, proceed to the Mina Docker instructions on <DocLink copy="Connect to the Network" url="/using-mina/connecting" />
+Docker est un outil multiplateforme qui vous permet d'exécuter une machine virtuelle qui exécutera tous les logiciels nécessaires. Veuillez suivre les instructions d'installation officielles pour votre plate-forme sur [cette page](https://docs.docker.com/get-docker/). Une fois docker installé, passez aux instructions de Mina Docker sur <DocLink copy="Se connecter au réseau " url="/using-mina/connecting" />
 
-### Build from source
+### Compiler à partir des sources
 
-If you're running another Linux distro or some version of macOS, you can [try building Mina from source code](https://github.com/MinaProtocol/mina/blob/master/README-dev.md#building-mina). Please note that other operating systems haven't been tested thoroughly, and may have issues. Feel free to share any logs and get troubleshooting help in the [Discord server](https://bit.ly/MinaDiscord).
+Si vous utilisez une autre distribution Linux ou une version de macOS, vous pouvez [essayez de compiler Mina à partir du code source](https://github.com/MinaProtocol/mina/blob/master/README-dev.md#building-mina). Veuillez noter que les autres systèmes d'exploitation n'ont pas été testés de manière approfondie et peuvent présenter des problèmes. N'hésitez pas à partager les journaux et à obtenir de l'aide pour le dépannage sur le [server Discord](https://bit.ly/MinaDiscord).
 
-## Set up port forwarding and any firewalls
+## Configurer la redirection des ports et des pare-feux
 
-If you are running a firewall, you should allow traffic on TCP port 8302. Additionally, unless the `-external-ip YOUR_IP` flag is provided, the daemon will use HTTPS (443) and HTTP (80) to try and determine its own IP address.
+Si vous utilisez un pare-feu, vous devez autoriser le trafic sur le port TCP 8302. De plus, à moins que l'indicateur `-external-ip YOUR_IP` ne soit fourni, le programme fantôme utilisera HTTPS (443) et HTTP (80) pour essayer de déterminer sa propre adresse IP. 
 
-You may need to configure your router's port forwarding to allow inbound traffic to the following ports through your **external** IP address.
+Vous devrez peut-être configurer la redirection de port de votre routeur pour autoriser le trafic entrant vers les ports suivants via votre adresse IP **externe**. 
 
 - `TCP` port `8302`
-- _Optionally_ to use the GraphQL service, expose `TCP` port `3085`
+- _Optionally_ pour utiliser le service GraphQL, exposez le port `TCP` `3085` 
 
-For walk-through instructions see <DocLink copy="this guide" url="/troubleshooting#port-forwarding" />. 
+Pour les instructions détaillées, voir <DocLink copy="ce guide" url="/troubleshooting#port-forwarding" />. 
 
-## Next
+## Suivant
 
-Now that you've installed Mina and configured your network, let's move on to the next step - <DocLink copy="generating a keypair!" url="/using-mina/keypair" />
+Maintenant que vous avez installé Mina et configuré votre réseau, passons à l'étape suivante - <DocLink copy="générer une paire de clés !" url="/using-mina/keypair" />
