--- a/pages/fr/index.mdx
+++ b/pages/fr/index.mdx
@@ -1,6 +1,6 @@
 import Page from "@reason/pages/Docs";
 import DocLink from "@reason/components/DocLink";
-export default Page({ title: "Overview" });
+export default Page({ title: "Vue d'ensemble" });
 
 # Vue d'ensemble
 
